<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Win8StyleActivity!</string>
    <string name="app_name">Win8Style</string>
    <string name="accident_warning">故障警告</string>
    <string name="routing_inspection">巡检</string>
    <string name="base_station_inspection">基站巡检</string>
    <string name="group_inspection">集团巡检</string>
    <string name="route_inspection">路线巡检</string>
    <string name="work_order">工单</string>
    <string name="qr_code">二维码</string>
    <string name="open">开通</string>
    <string name="hidden_danger_report">隐患上报</string>
    <string name="system_info">系统信息</string>
    <string name="person_info">个人信息</string>
    <string name="folder">内存管理</string>
    <string name="search">查找</string>
    <string name="more">更多</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="input_hint">请输入信息....</string>
    <string name="crm_order_no">CRM订单号</string>
    <string name="crm_order_serial_no">CRM订单序列号</string>
    <string name="pboss_order_no">PBOSS订单号</string>
    <string name="business_type">业务类型</string>
    <string name="product_code">产品编码</string>
    <string name="product_account">产品账号</string>
    <string name="cellname">小区名称</string>
    <string name="customer_name">客户名称</string>
    <string name="time">时间</string>
    <string name="distance">距离</string>
    <string name="cycle">巡检周期</string>
    <string name="distance_five_hm">500m</string>
    <string name="distance_one_km">1km</string>
    <string name="distance_two_km">2km</string>
    <string name="distance_five_km">5km</string>
    <string name="distance_full_city">全城</string>
    <string name="time_last">最新</string>
    <string name="time_old">较早</string>
    <string name="cycle_day">日</string>
    <string name="cycle_week">周</string>
    <string name="cycle_half_month">半月</string>
    <string name="cycle_month">月</string>
    <string name="cycle_half_year">半年</string>
    <string name="cycle_year">年</string>
    <string name="title_activity_memory_manager">MemoryManagerActivity</string>
    <string name="action_settings">Settings</string>
    
    <string name="app_title">程序名称：</string>
    <string name="app_type">程序类型：</string>
    <string name="app_memory">程序所占内存：</string>
    <string name="app_kill">关闭</string>
    <string name="free_memory">剩余内存：</string>

</resources>