<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:test="http://schemas.android.com/apk/res/cn.mr.ams.android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<RelativeLayout 
	    android:layout_width="fill_parent"
        android:layout_height="@dimen/subhead_height"
        android:background="@color/subhead_bg">
	    <TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="30dp"
        	android:layout_centerVertical="true"
        	android:text="@string/search" 
        	android:textSize="@dimen/text_normal_size"
        	android:textColor="@color/white"
        	android:id="@+id/subhead"/>
	</RelativeLayout>
	<ScrollView 
        android:scrollbars="none" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">
        <RelativeLayout 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">
            <LinearLayout 
                android:id="@+id/search_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="12dp"
                android:background="@color/home_tab_bg_normal"
                android:orientation="vertical"
                android:weightSum="1">
                <TextView
        			android:layout_width="wrap_content"
        			android:layout_height="@dimen/edittext_height"
        			android:layout_marginLeft="12dp"
        			android:layout_marginRight="12dp"
        			android:layout_marginTop="25dp"
        			android:layout_marginBottom="20dp"
        			android:text="@string/crm_order_no" 
        			android:textSize="@dimen/text_normal_size"/>
                <TextView
                    android:layout_width="wrap_content"
        			android:layout_height="@dimen/edittext_height"
        			android:layout_marginLeft="12dp"
        			android:layout_marginRight="12dp"
        			android:layout_marginBottom="20dp"
        			android:text="@string/crm_order_serial_no" 
        			android:textSize="@dimen/text_normal_size"/>
                <TextView
        			android:layout_width="wrap_content"
        			android:layout_height="@dimen/edittext_height"
        			android:layout_marginLeft="12dp"
        			android:layout_marginRight="12dp"
        			android:layout_marginBottom="20dp"
        			android:text="@string/pboss_order_no" 
        			android:textSize="@dimen/text_normal_size"/>
	    		<TextView
        			android:layout_width="wrap_content"
        			android:layout_height="@dimen/edittext_height"
        			android:layout_marginLeft="12dp"
        			android:layout_marginRight="12dp"
        			android:layout_marginBottom="20dp"
        			android:text="@string/business_type" 
        			android:textSize="@dimen/text_normal_size"/>
	    		<TextView
        			android:layout_width="wrap_content"
        			android:layout_height="@dimen/edittext_height"
        			android:layout_marginLeft="12dp"
        			android:layout_marginRight="12dp"
        			android:layout_marginBottom="20dp"
        			android:text="@string/product_code" 
        			android:textSize="@dimen/text_normal_size"/>
	    		<TextView
        			android:layout_width="wrap_content"
        			android:layout_height="@dimen/edittext_height"
        			android:layout_marginLeft="12dp"
        			android:layout_marginRight="12dp"
        			android:layout_marginBottom="20dp"
        			android:text="@string/product_account" 
        			android:textSize="@dimen/text_normal_size"/>
	    		<TextView
        			android:layout_width="wrap_content"
        			android:layout_height="@dimen/edittext_height"
        			android:layout_marginLeft="12dp"
        			android:layout_marginRight="12dp"
        			android:layout_marginBottom="20dp"
        			android:text="@string/cellname" 
        			android:textSize="@dimen/text_normal_size"/>
	    		<TextView
        			android:layout_width="wrap_content"
        			android:layout_height="@dimen/edittext_height"
        			android:layout_marginLeft="12dp"
        			android:layout_marginRight="12dp"
        			android:layout_marginBottom="25dp"
        			android:text="@string/customer_name" 
        			android:textSize="@dimen/text_normal_size"/>
	    
            </LinearLayout>
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/search_linear"
                android:layout_marginLeft="3dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:background="@color/home_tab_bg_normal"
                android:orientation="vertical"
                android:weightSum="1">
                <TextView 
                    android:layout_height="@dimen/edittext_height"
	        		android:layout_width="fill_parent"
	        		android:layout_marginLeft="12dp"
	        		android:layout_marginRight="12dp"
	        		android:layout_marginTop="25dp"
	        		android:layout_marginBottom="20dp"
	        		android:paddingLeft="10dp"
	        		android:background="@drawable/my_edittext_bg"
	        		android:textColor="@color/white"
	        		android:textSize="@dimen/edittext_font_size"
	        		android:id="@+id/edit1"/>
                <cn.mr.ams.android.widget.CustomSpinner 
	        		android:layout_width="@dimen/edittext_width"
	        		android:layout_height="@dimen/edittext_height"
	        		android:layout_gravity="center_horizontal"
	        		android:layout_marginBottom="20dp"
	        		test:contents="@array/array_system_config_spinner_getcellgps"
	        		android:id="@+id/edit2"/>
                <EditText 
	        		android:layout_width="@dimen/edittext_width"
	        		android:layout_height="@dimen/edittext_height"
	        		android:layout_gravity="center_horizontal"
	        		android:layout_marginBottom="20dp"
	        		android:id="@+id/edit3"/>
                <EditText 
	        		android:layout_width="@dimen/edittext_width"
	        		android:layout_height="@dimen/edittext_height"
	        		android:layout_gravity="center_horizontal"
	        		android:layout_marginBottom="20dp"
	        		android:id="@+id/edit4"/>
                <EditText 
	        		android:layout_width="@dimen/edittext_width"
	        		android:layout_height="@dimen/edittext_height"
	        		android:layout_gravity="center_horizontal"
	        		android:layout_marginBottom="20dp"
	        		android:id="@+id/edit5"/>
                <EditText 
	        		android:layout_width="@dimen/edittext_width"
	        		android:layout_height="@dimen/edittext_height"
	        		android:layout_gravity="center_horizontal"
	        		android:layout_marginBottom="20dp"
	        		android:id="@+id/edit6"/>
                <cn.mr.ams.android.widget.CustomSpinner 
	        		android:layout_width="@dimen/edittext_width"
	        		android:layout_height="@dimen/edittext_height"
	        		android:layout_gravity="center_horizontal"
	        		android:layout_marginBottom="20dp"
	        		test:contents="@array/array_system_config_spinner_logintype"
	        		android:id="@+id/edit7"/>
                <cn.mr.ams.android.widget.CustomSpinner 
	        		android:layout_width="@dimen/edittext_width"
	        		android:layout_height="@dimen/edittext_height"
	        		android:layout_gravity="center_horizontal"
	        		android:layout_marginBottom="20dp"
	        		android:id="@+id/edit8"/>
            </LinearLayout>
	</RelativeLayout>
    </ScrollView> 

</LinearLayout>
